//ALL REQUEST PROTOS SHOULD INCLUDE A MinimumUserProto AS optional that represents which client sent it/triggered it 
//DO NO START PROPERTY METHODS WITH THE WORDS NEW OR COPY

import "MonsterStuff.proto";
import "SharedEnumConfig.proto";
import "Structure.proto";

package com.lvl6.proto;

option java_outer_classname = "MiniJobConfigProto";
//DO NOT USE ID AS THE NAME OF A PROPERTY IN ANY PROTO

message MiniJobProto {
     optional int32 miniJobId = 1;
     optional int32 requiredStructId = 2;
     optional string name = 3;
     optional int32 cashReward = 4;
     optional int32 oilReward = 5;
     optional int32 gemReward = 6;
     optional int32 monsterIdReward = 7;
     optional Quality quality = 8 [default = NO_QUALITY];
     optional int32 maxNumMonstersAllowed = 9;
     optional float chanceToAppear = 10;
     optional int32 hpRequired = 11;
     optional int32 atkRequired = 12;
     optional int32 minDmgDealt = 13;
     optional int32 maxDmgDealt = 14;
     optional int32 durationMinMinutes = 15;
     optional int32 durationMaxMinutes = 16;
     
}

//------------------------------------------------------------------------------------------
//user can have duplicate mini jobs
message UserMiniJobProto {
	optional int64 userMiniJobId = 1;
    optional int32 baseDmgReceived = 2;
	optional int64 timeStarted = 3; 
	repeated int64 userMonsterIds = 4;
	optional int64 timeCompleted = 5;
	optional int32 durationMinutes = 7;
	
	optional MiniJobProto miniJob = 6;
	//optional int32 durationMinutes = 7; defined above
}

//------------------------------------------------------------------------------------------
